@@ -3,6 +3,8 @@
 	* tests/test-pokerchildren.py.in
 	(PokerChildrenTestCase.test06_child_kill_missing_pid.process_kill):
 	Wrote method.
+	(PokerChildrenTestCase.test03_child_kill.process_kill): Added
+	search for verbose output
 
 2008-06-14  Bradley M. Kuhn  <bkuhn@ebb.org>
 
